XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>

* Increased performance due to fixed size arrays
* Regexp based coding search is replaced with string serach to avoid problems
  on cygwin and eliminate dependency on windows.

2013 Jan 18  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for release v.1.6
* Bug fix: docstrings comprised of many string literal parts are properly
  recognized now
* Bug fix: module docstring if it is the only file item is recognised properly
* Minor code cleanup

2012 Sep 17  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for release v.1.5
* Collect the input stream offset for the most of the items.

2012 May 13  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for release v.1.4
* Bug fix: no more problems in case if the last line is a comment one and there
  is no EOL at the end of this line.

2011 Sep 12  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for release v.1.3
* Line number and position number are collected separately for:
  - the 'def' keyword and a function name
  - the 'class' keyword and a class name


2011 Sep 2  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for first public release. v.1.2