@@ -1,0 +1,9 @@
+a = 10
+class C:
+    def f():
+        pass
+
+a
+
+    def g():
+        pass
